Fix more graphs
Fix bump graph displaying too much data
Fixed incorrect handling of data in dataformatter
Added random button for filter popup selection of data
Fixed tooltips for radial bar and scatter
Fixed tooltip not having background

--- a/Frontend/src/components/Stats.css
+++ b/Frontend/src/components/Stats.css
@@ -133,7 +133,7 @@
 }
 
 .GraphTooltip {
-  background: --tooltip;
+  background: var(--tooltip-container-background);
   padding: "9px 12px";
   border: "1px solid #ccc";
 }
